crates/eden-config/tests/cases/fail/invalid_sentry_environment_1/error.snap
---
source: crates/eden-config/tests/cases.rs
expression: diagnostic
input_file: crates/eden-config/tests/cases/fail/invalid_sentry_environment_1
---
error: Sentry environment must not be empty
  ┌─ /eden.toml:3:15
  │
3 │ environment = ""
  │               ^^
  │
  = Common values: "production", "staging", "development"
